# data_transmission_embedded_system

./: CMakeLists.txt  README.txt
include/: debug.h  i2c_slave_mode.h  loRaWAN.h
src/: debug.c  i2c_slave_mode.c  loRaWAN.c  main.c
